# jimraft

./: .gitignore  CMakeLists.txt  LICENSE
base/: CMakeLists.txt  byte_order.h  fs_util.cpp  fs_util.h  shared_mutex.h  status.cpp  status.h  util.cpp  util.h
cmake/: third-party.cmake
common/: CMakeLists.txt  logger.cpp  logger.h
net/: CMakeLists.txt  context_pool.cpp  context_pool.h  message.cpp  message.h  options.h  protocol.cpp  protocol.h  server.cpp  server.h  session.cpp  session.h  statistics.h
raft/: CMakeLists.txt
raft/include/raft/: c.h  entry_flags.h  log_reader.h  node_resolver.h  options.h  raft.h  server.h  snapshot.h  statemachine.h  status.h  types.h
raft/src/: c.cpp  options.cpp  server.cpp  status.cpp  types.cpp
raft/src/impl/: bulletin_board.cpp  bulletin_board.h  mutable_options.cpp  mutable_options.h  raft.pb.cc  raft.pb.h  raft.proto  raft_context.h  raft_exception.h  raft_fsm.cpp  raft_fsm.h  raft_fsm_candidate.cpp  raft_fsm_follower.cpp  raft_fsm_leader.cpp  raft_impl.cpp  raft_impl.h  raft_log.cpp  raft_log.h  raft_log_unstable.cpp  raft_log_unstable.h  raft_read_context.cpp  raft_read_context.h  raft_types.cpp  raft_types.h  ready.h  replica.cpp  replica.h  server_impl.cpp  server_impl.h  work_thread.cpp  work_thread.h
raft/src/impl/snapshot/: apply_task.cpp  apply_task.h  manager.cpp  manager.h  send_task.cpp  send_task.h  task.h  types.h  worker.cpp  worker.h  worker_pool.cpp  worker_pool.h
raft/src/impl/storage/: log_file.cpp  log_file.h  log_format.cpp  log_format.h  log_index.cpp  log_index.h  log_reader.cpp  log_reader.h  meta_file.cpp  meta_file.h  storage.h  storage_disk.cpp  storage_disk.h  storage_memory.cpp  storage_memory.h
raft/src/impl/transport/: inprocess_transport.cpp  inprocess_transport.h  tcp_transport.cpp  tcp_transport.h  transport.h
raft/test/: cluster_test.cpp  number_statemachine.h  single_node_test.cpp
raft/test/bench/: address.cpp  address.h  config.cpp  config.h  main.cpp  node.cpp  node.h  range.cpp  range.h
raft/test/playground/: address_manager.h  command_line.cpp  command_line.h  main.cpp  server.cpp  server.h  statemachine.cpp  statemachine.h  telnet_command.h  telnet_service.cpp  telnet_service.h  telnet_session.cpp  telnet_session.h
raft/test/unittest/: CMakeLists.txt  disk_storage_unittest.cpp  log_file_unittest.cpp  log_unstable_unittest.cpp  meta_file_unittest.cpp  raft_log_unittest.cpp  raft_types_unittest.cpp  replica_unittest.cpp  snapshot_send_unittest.cpp  snapshot_worker_unittest.cpp  test_util.cpp  test_util.h
